Fix deprecation warnings
- Enable deprecation warnings in build
- Use Java Compiler recorder intead of ECJ